Removed direct output of CandlepinQuery from the resource endpoints
- Updated all endpoints to not return a CandlepinQuery directly,
  instead processing it immediately
- Removed the ModelTranslator.translateQuery method
- Removed the CandlepinQueryInterceptor